# funchotorn

./: CMakeLists.txt  Messages.sh  README.md  makerelease.sh
.tx/: config
cmd/: CMakeLists.txt  main.cpp  updater.cpp  updater.h
supplementary/: CMakeLists.txt  config.in  config.json  funchotorn-updater.service.in  funchotorn-updater.timer
translations/: CMakeLists.txt  funchotorn.ts  funchotorn_de.ts
